# why-large-models-generalize-better

./: CMakeLists.txt  continual_feature_search.cpp  experiment.py  feature_measurer.cpp  feature_search.cpp  graph_expeirments.cpp  load_model.cpp
experiment_configs/: sample_confing.json
include/environments/: environment_factory.h  input_distribution.h
include/experiment/: Database.h  Experiment.h  Metric.h
include/nn/: architure_initializer.h  graphfactory.h  optimizer_factory.h  weight_initializer.h  weight_optimizer.h
include/nn/networks/: graph.h  vertex.h
src/: utils.cpp
src/environments/: environment_factory.cpp  input_distribution.cpp  mnist_environment.cpp
src/experiment/: Database.cpp  Experiment.cpp  Metric.cpp
src/nn/: architecture_initializer.cpp  graphfactory.cpp  optimizer_factory.cpp  weight_initializer.cpp  weight_optimizer.cpp
src/nn/networks/: edge.cpp  graph.cpp  graph_utility_prop_implementations.cpp  vertex.cpp
